# mc-dropout

./: README.md  kernel_1d.py  kernel_2d_features.py  kernel_2d_tokens.py  pyproject.toml  test-environment.yml  variational_dropout.py
performance_report/: performance_fp16.csv  performance_fp16_noisy.csv  performance_fp32.csv  performance_fp32_noisy.csv  performance_fp64.csv  performance_fp64_noisy.csv  results.html
